Add 'import' directive support. Tests now corrupted!(because in beginning I decide to ignore 'import'). Need to restore tests. Change base structure of abstract ProtoBuf classes (for more easy inheritance). Change directory selection dialog to more modern style.

--- a/Generator/Test/ProtoBufGeneratorTests.dproj
+++ b/Generator/Test/ProtoBufGeneratorTests.dproj
@@ -78,6 +78,7 @@
         <DCC_RemoteDebug>true</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
+        <DCC_Define>madExcept;LeakChecking;$(DCC_Define)</DCC_Define>
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
@@ -102,7 +103,6 @@
         <DCCReference Include="TestuProtoBufGenerator.pas"/>
         <DCCReference Include="Win32\Debug\test1.pas"/>
         <DCCReference Include="TestGeneratedProtoBufPas.pas"/>
-        <DCCReference Include="Win32\Debug\test2.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
