--- a/Generator/Test/ProtoBufGeneratorTests.dproj
+++ b/Generator/Test/ProtoBufGeneratorTests.dproj
@@ -78,6 +78,7 @@
         <DCC_RemoteDebug>true</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
+        <DCC_MapFile>3</DCC_MapFile>
         <DCC_Define>madExcept;LeakChecking;$(DCC_Define)</DCC_Define>
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
     </PropertyGroup>
@@ -101,8 +102,6 @@
         <DCCReference Include="..\..\pbPublic.pas"/>
         <DCCReference Include="..\..\StrBuffer.pas"/>
         <DCCReference Include="TestuProtoBufGenerator.pas"/>
-        <DCCReference Include="Win32\Debug\test1.pas"/>
-        <DCCReference Include="TestGeneratedProtoBufPas.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
