Fix naming of nested classes. Fix problem with missed constructor declaration in interface section. Add multiply .proto files loading into generator. Add example "how to use generated files" and speed test (in this example)

--- a/example2_with_Generator/ProjectExample2.dproj
+++ b/example2_with_Generator/ProjectExample2.dproj
@@ -48,6 +48,7 @@
     <PropertyGroup Condition="'$(Base)'!=''">
         <VerInfo_Locale>1049</VerInfo_Locale>
         <DCC_Namespace>System;Xml;Data;Datasnap;Web;Soap;Vcl;Vcl.Imaging;Vcl.Touch;Vcl.Samples;Vcl.Shell;$(DCC_Namespace)</DCC_Namespace>
+        <DCC_UnitSearchPath>..\;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
         <Icon_MainIcon>$(BDS)\bin\delphi_PROJECTICON.ico</Icon_MainIcon>
         <SanitizedProjectName>ProjectExample2</SanitizedProjectName>
         <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
@@ -129,7 +130,7 @@
                 </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="2">
-                <DeployFile LocalName="Win32\Debug\ProjectExample2.exe" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="..\..\Ready\ProjectExample2.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>ProjectExample2.exe</RemoteName>
                         <Overwrite>true</Overwrite>
