--- a/example2_with_Generator/ProjectExample2.dproj
+++ b/example2_with_Generator/ProjectExample2.dproj
@@ -52,8 +52,8 @@
         <Icon_MainIcon>$(BDS)\bin\delphi_PROJECTICON.ico</Icon_MainIcon>
         <SanitizedProjectName>ProjectExample2</SanitizedProjectName>
         <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
-        <DCC_DcuOutput>..\..\DCU</DCC_DcuOutput>
-        <DCC_ExeOutput>..\..\Ready</DCC_ExeOutput>
+        <DCC_DcuOutput>..\DCU</DCC_DcuOutput>
+        <DCC_ExeOutput>..\Ready</DCC_ExeOutput>
         <DCC_E>false</DCC_E>
         <DCC_N>false</DCC_N>
         <DCC_S>false</DCC_S>
