Tests: renamed class and unit TestProtoBufMethods to TestProtoBufRawIO as these tests cover input/output for single tags/fields and not complete message-based tests

--- a/Generator/Test/ProtoBufGeneratorTests.dproj
+++ b/Generator/Test/ProtoBufGeneratorTests.dproj
@@ -97,7 +97,7 @@
         <DCCReference Include="..\..\pbPublic.pas"/>
         <DCCReference Include="..\..\StrBuffer.pas"/>
         <DCCReference Include="TestuProtoBufGenerator.pas"/>
-        <DCCReference Include="TestProtoBuf.pas"/>
+        <DCCReference Include="TestuProtoBufRawIO.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
